--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
+  "homepage": "https://jaypee-2003.github.io/jaypee",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.3",
@@ -25,7 +26,9 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -50,6 +53,7 @@
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.27.0",
     "@craco/craco": "^7.1.0",
-    "@emotion/babel-plugin": "^11.13.5"
+    "@emotion/babel-plugin": "^11.13.5",
+    "gh-pages": "^6.3.0"
   }
 }
